--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,31 @@
 <!--The content below is only a placeholder and can be replaced.-->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 <div class="container">
   <h2>Upload Document</h2>
-  <form  (ngSubmit)="onSubmit(fileForm)">
-    <div class="form-group">
+  <form >
+    <!-- <div class="form-group">
       <label for="name">Name:</label>
-      <input type="text" class="form-control" name="name"   [(ngModel)]="fileForm.name" required >
-    </div>
+      <input type="text" class="form-control" name="name"  >
+    </div> -->
     <div class="form-group">
       <label for="file">File:</label>
-      <input type="file" class="form-control" name="mydoc" [(ngModel)]="fileForm.file" required >
+      <input type="file" class="form-control" name="file" ng2FileSelect [uploader]="uploader"  >
     </div>
-    <button type="submit" class="btn btn-default">Upload</button>
+    <button type="button" class="btn btn-primary" (click)="uploader.uploadAll()" 
+  [disabled]="!uploader.getNotUploadedItems().length">Upload</button>
   </form>
 </div>
+<!-- <input type="file" name="file" ng2FileSelect [uploader]="uploader" />
+<input type="text" name="name" ng2FileSelect />
+
+<button type="button" class="btn btn-success btn-s" 
+  (click)="uploader.uploadAll()" 
+  [disabled]="!uploader.getNotUploadedItems().length" >
+      Upload an Image
+</button> -->
+
+
 
 <router-outlet></router-outlet>
